--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,6 +46,10 @@ set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami) / '
 set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
+set -g default-terminal "xterm-256color"
+set -s set-clipboard on
+
+set-option -g default-shell /bin/zsh
 
 # Tmux Plugin Manager
 set -g @plugin 'tmux-plugins/tpm'
